--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="nav-container">
             <a href="#" class="logo">
                 <span class="logo-icon">🧁</span>
-                <span class="logo-text">Sweet Spot</span>
-                <span class="logo-location">Augustów</span>
+                <div class="logo-text-wrapper"><span class="logo-text">Sweet Spot</span>
+                <span class="logo-location">Augustów</span></div>
             </a>
             <ul class="nav-links">
                 <li><a href="#home">Start</a></li>
