🌈 Add Makaroniki (4 flavors + boxes), remove Cheesecake Sticks

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <button class="category-pill active" data-category="all"><span>Wszystko</span></button>
                 <button class="category-pill" data-category="monoporcje"><span>Monoporcje</span></button>
                 <button class="category-pill" data-category="tartaletki"><span>Tartaletki</span></button>
-                <button class="category-pill" data-category="cheesecake"><span>Cheesecake Sticks</span></button>
+                <button class="category-pill" data-category="makaroniki"><span>Makaroniki 🌈</span></button>
                 <button class="category-pill" data-category="ciasta"><span>Ciasta</span></button>
                 <button class="category-pill" data-category="sezonowe"><span>Sezonowe 🌸</span></button>
             </div>
