🔧 Fix flavorModal HTML structure (modal-overlay wrapper)

--- a/index.html
+++ b/index.html
@@ -341,8 +341,8 @@
     </script>
 
     <!-- Macaron Flavor Picker Modal -->
-    <div id="flavorModal" class="modal">
-        <div class="modal-content flavor-picker">
+    <div class="modal-overlay" id="flavorModal">
+        <div class="modal flavor-picker">
             <button class="modal-close" onclick="closeFlavorModal()">&times;</button>
             <h2 class="modal-title">🌈 Wybierz smaki</h2>
             <p class="flavor-subtitle" id="flavorSubtitle">Wybierz 6 makaroników</p>
