--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
         <div class="nav-container">
-            <a href="#" class="logo">
+            <a href="#home" class="logo">
                 <span class="logo-icon">🧁</span>
                 <div class="logo-text-wrapper"><span class="logo-text">Sweet Spot</span>
                 <span class="logo-location">Augustów</span></div>
@@ -312,11 +312,17 @@
         }
 
         // Smooth scroll for anchor links
-        document.querySelectorAll("a[href^=\"#\"]").forEach(anchor => {
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener("click", function(e) {
-                e.preventDefault();
-                const target = document.querySelector(this.getAttribute("href"));
+                const href = this.getAttribute("href");
+                if (href === "#" || href.length < 2) {
+                    e.preventDefault();
+                    window.scrollTo({ top: 0, behavior: "smooth" });
+                    return;
+                }
+                const target = document.querySelector(href);
                 if (target) {
+                    e.preventDefault();
                     target.scrollIntoView({ behavior: "smooth", block: "start" });
                 }
             });
