--- a/index.html
+++ b/index.html
@@ -307,9 +307,20 @@
         document.querySelectorAll(".fade-in").forEach(el => observer.observe(el));
 
         // Mobile menu toggle
-        function toggleMobileMenu() {
-            document.querySelector(".nav-links").classList.toggle("active");
-        }
+    function toggleMobileMenu() {
+        const nav = document.querySelector(".nav-links");
+        const btn = document.querySelector(".mobile-menu-btn");
+        nav.classList.toggle("active");
+        btn.classList.toggle("active");
+    }
+
+    // Zamknij menu po kliknieciu linku (mobile)
+    document.querySelectorAll('.nav-links a').forEach(link => {
+        link.addEventListener('click', () => {
+            document.querySelector('.nav-links').classList.remove('active');
+            document.querySelector('.mobile-menu-btn').classList.remove('active');
+        });
+    });
 
         // Smooth scroll for anchor links
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
