K01: Fix submitOrder crash - add payment radios in HTML, safe querySelector in JS, payment styles in CSS

--- a/index.html
+++ b/index.html
@@ -247,6 +247,19 @@
                         <label for="customerNotes">Uwagi do zamówienia</label>
                         <textarea id="customerNotes" rows="3" placeholder="Np. dedykacja, alergie..."></textarea>
                     </div>
+                    <div class="form-group">
+                        <label>Metoda płatności</label>
+                        <div class="payment-options">
+                            <label class="payment-option">
+                                <input type="radio" name="payment" value="cash" checked>
+                                <span class="payment-label">Gotówka przy odbiorze</span>
+                            </label>
+                            <label class="payment-option">
+                                <input type="radio" name="payment" value="blik">
+                                <span class="payment-label">BLIK przy odbiorze</span>
+                            </label>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Step 4: Confirmation -->
