K04: Add #orderSummary div to step4, fix showOrderConfirmation - remove duplicate goToStep(4), add orderNumber display

--- a/index.html
+++ b/index.html
@@ -263,14 +263,15 @@
                 </div>
 
                 <!-- Step 4: Confirmation -->
-                <div class="order-step" id="step4" style="display:none;">
-                    <div style="text-align:center; padding: 2rem;">
-                        <div style="font-size:4rem; margin-bottom:1rem;">🎉</div>
-                        <h3 style="margin-bottom:1rem;">Dziękujemy za zamówienie!</h3>
-                        <p style="color:var(--color-text-light);">Skontaktujemy się z Tobą w celu potwierdzenia.</p>
-                        <p style="margin-top:1rem;"><strong>Numer zamówienia:</strong> <span id="orderNumber"></span></p>
+                    <div class="order-step" id="step4" style="display:none;">
+                        <div style="text-align:center; padding: 1rem;">
+                            <div style="font-size:3rem; margin-bottom:0.5rem;">🎉</div>
+                            <h3 style="margin-bottom:0.5rem;">Dziękujemy za zamówienie!</h3>
+                            <p style="color:var(--color-text-light); font-size:0.9rem;">Skontaktujemy się z Tobą w celu potwierdzenia.</p>
+                            <p style="margin-top:0.5rem;"><strong>Nr zamówienia:</strong> <span id="orderNumber">-</span></p>
+                        </div>
+                        <div id="orderSummary" style="margin-top: 1rem; padding: 1rem; background: var(--color-bg-secondary, #f8f8f8); border-radius: var(--radius-md); font-size: 0.9rem; text-align: left;"></div>
                     </div>
-                </div>
 
                 <!-- Navigation Buttons -->
                 <div class="modal-actions" id="modalActions">
