K05: Add id=checkoutBtn to button, enhance disable state with opacity/pointerEvents, add empty cart guard in openOrderModal

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <span>Suma:</span>
                 <span id="cartTotal">0 zł</span>
             </div>
-            <button class="checkout-btn" onclick="openOrderModal()">Zamów teraz ✨</button>
+            <button class="checkout-btn" id="checkoutBtn" onclick="openOrderModal()">Zamów teraz ✨</button>
         </div>
     </div>
 
