feat(ux): visual polish — scroll reveals, hero animation, micro-interactions
- New js/animations.js: IntersectionObserver scroll reveals + MutationObserver for dynamic cards
- Hero entrance: fadeIn title + slideUp subtitle/CTA with staggered delays
- Button micro-interactions: lift on hover, spring-back on active
- Product card hover: 6px lift with shadow-lg glow
- Cart sidebar: smooth cubic-bezier slide transition
- 10 reveal-on-scroll elements in HTML + dynamic product cards
- prefers-reduced-motion: full override for accessibility
- Replaced old animateProducts() setTimeout with proper IntersectionObserver

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <!-- Categories -->
     <section class="categories">
         <div class="container">
-            <div class="category-pills">
+            <div class="category-pills reveal-on-scroll">
                 <button class="category-pill active" data-category="all"><span>Wszystko</span></button>
                 <button class="category-pill" data-category="monoporcje"><span>Monoporcje</span></button>
                 <button class="category-pill" data-category="tartaletki"><span>Tartaletki</span></button>
@@ -120,8 +120,8 @@
     <!-- Products Section -->
     <section id="products" class="products">
         <div class="container">
-            <h2 class="section-title fade-in">Nasza Oferta</h2>
-            <p class="section-subtitle fade-in">Każdy deser to starannie skomponowana kompozycja smaków</p>
+            <h2 class="section-title reveal-on-scroll">Nasza Oferta</h2>
+            <p class="section-subtitle reveal-on-scroll">Każdy deser to starannie skomponowana kompozycja smaków</p>
 
             <div class="products-grid" id="productsGrid">
                 <!-- Products will be loaded by JavaScript -->
@@ -133,11 +133,11 @@
     <section id="about" class="about">
         <div class="container">
             <div class="about-content">
-                <div class="about-text fade-in">
-                    <h2 class="section-title">O Sweet Spot</h2>
+                <div class="about-text reveal-on-scroll">
+                    <h2 class="section-title reveal-on-scroll">O Sweet Spot</h2>
                     <p>Tworzymy autorskie desery z najwyższej jakości składników. Każda monoporcja to małe dzieło sztuki cukierniczej, stworzone z pasją i dbałością o każdy detal.</p>
                     <p>Nasze produkty są przygotowywane na zamówienie, dzięki czemu masz pewność świeżości i najwyższej jakości.</p>
-                    <div class="about-features">
+                    <div class="about-features reveal-on-scroll">
                         <div class="feature">
                             <span class="feature-icon">🌿</span>
                             <span>Naturalne składniki</span>
@@ -152,7 +152,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="about-image fade-in">
+                <div class="about-image reveal-on-scroll">
                     <div class="image-placeholder">
                         <span>🎂</span>
                         <p>Twoje zdjęcie tutaj</p>
@@ -165,9 +165,9 @@
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
-            <h2 class="section-title fade-in">Kontakt</h2>
+            <h2 class="section-title reveal-on-scroll">Kontakt</h2>
             <div class="contact-grid">
-                <div class="contact-info fade-in">
+                <div class="contact-info reveal-on-scroll">
                     <div class="contact-item">
                         <span class="contact-icon">📍</span>
                         <div>
@@ -190,7 +190,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="contact-hours fade-in">
+                <div class="contact-hours reveal-on-scroll">
                     <h3>Godziny odbioru</h3>
                     <ul>
                         <li><span>Pon - Pt:</span> <span>10:00 - 18:00</span></li>
@@ -327,6 +327,7 @@
     <script src="js/calendar.js"></script>
     <script src="js/app.js"></script>
     <script src="js/flavors.js"></script>
+    <script src="js/animations.js"></script>
 
     <!-- Premium Effects Script -->
     <script>
