fix: resolve debug audit issues - cart overflow, OG image, shape overflow, radio a11y, z-index
- Add visibility:hidden/visible to cart-sidebar for proper off-screen hiding
- Add transition delay for visibility to match slide animation
- Add og:image, og:image:width, og:image:height meta tags
- Reduce shape-2 size on mobile to prevent overflow
- Add aria-label to payment radio inputs
- Reduce skip-to-content z-index from 10000 to 999
- Add overflow-x:hidden to html element

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 <meta property="og:url" content="https://sweetspot-augustow.pl">
 <meta property="og:locale" content="pl_PL">
 <meta property="og:site_name" content="Sweet Spot Augustów">
+<meta property="og:image" content="https://sweetspot-augustow.pl/img/og-image.jpg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
@@ -287,11 +290,11 @@
                         <label>Metoda płatności</label>
                         <div class="payment-options">
                             <label class="payment-option">
-                                <input type="radio" name="payment" value="cash" checked>
+                                <input type="radio" name="payment" value="cash" checked aria-label="Gotówka przy odbiorze">
                                 <span class="payment-label">Gotówka przy odbiorze</span>
                             </label>
                             <label class="payment-option">
-                                <input type="radio" name="payment" value="blik">
+                                <input type="radio" name="payment" value="blik" aria-label="BLIK przy odbiorze">
                                 <span class="payment-label">BLIK przy odbiorze</span>
                             </label>
                         </div>
