seo: add sitemap.xml, robots.txt, og:image, fix meta URLs
- Created sitemap.xml with site structure
- Created robots.txt allowing all crawlers
- Generated branded og:image (1200x630) for social sharing
- Fixed canonical/og:url to actual GitHub Pages URL
- Added twitter:image meta tag
- Added sitemap link in head

--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@
     <meta name="description" content="Sweet Spot Augustów — rękodzielnicza cukiernia w Augustowie. Torty, makaroniki, ciasta na zamówienie. Świeże składniki, wyjątkowy smak.">
 <meta name="keywords" content="cukiernia Augustów, torty na zamówienie, makaroniki, ciasta, Sweet Spot">
 <meta name="author" content="Sweet Spot Augustów">
-<link rel="canonical" href="https://sweetspot-augustow.pl">
+<link rel="canonical" href="https://mizuri0x.github.io/sweetspotaugustow">
 
 <!-- Open Graph -->
 <meta property="og:title" content="Sweet Spot Augustów — Rękodzielnicza Cukiernia">
 <meta property="og:description" content="Torty, makaroniki i ciasta na zamówienie. Świeże składniki, wyjątkowy smak.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://sweetspot-augustow.pl">
+<meta property="og:url" content="https://mizuri0x.github.io/sweetspotaugustow">
 <meta property="og:locale" content="pl_PL">
 <meta property="og:site_name" content="Sweet Spot Augustów">
-<meta property="og:image" content="https://sweetspot-augustow.pl/img/og-image.jpg">
+<meta property="og:image" content="https://mizuri0x.github.io/sweetspotaugustow/img/og-image.jpg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Sweet Spot Augustów — Rękodzielnicza Cukiernia">
+<meta name="twitter:image" content="https://mizuri0x.github.io/sweetspotaugustow/img/og-image.jpg">
 <meta name="twitter:description" content="Torty, makaroniki i ciasta na zamówienie.">
 
 <!-- JSON-LD Structured Data -->
@@ -32,7 +33,7 @@
   "@type": "Bakery",
   "name": "Sweet Spot Augustów",
   "description": "Rękodzielnicza cukiernia w Augustowie. Torty, makaroniki, ciasta na zamówienie.",
-  "url": "https://sweetspot-augustow.pl",
+  "url": "https://mizuri0x.github.io/sweetspotaugustow",
   "address": {
     "@type": "PostalAddress",
     "addressLocality": "Augustów",
@@ -47,6 +48,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+<link rel="sitemap" type="application/xml" href="/sweetspotaugustow/sitemap.xml">
 </head>
 <body>
 <a href="#oferta" class="skip-to-content" aria-label="Przejdź do treści">Przejdź do treści</a>
